# RustyJournal

hello-rust/: Cargo.toml
hello-rust/src/: foo.txt  main  main.rs  readFile  read_file.rs
rusty-village/: Cargo.toml
rusty-village/src/: main.rs
