[package]
name = "rusty-village"
version = "0.1.0"
authors = ["Pdhenson <Pdhenson@mail.csuchico.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-serialize = "*"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0.40"
rand = "*"
